#pragma once

#include "chroma/app/layers/Layer.h"

namespace chroma::app::layer::game {
class MenuLayer : public Layer
{
};
}// namespace chroma::app::layer::game
